# music_box

./: CMakeLists.txt  README.md  partitions.csv  run.sh  sdkconfig  sdkconfig.old
components/bt_comp/: CMakeLists.txt  init_bt.c
components/bt_comp/include/: init_bt.h
components/i2c_oled/: CMakeLists.txt  drawing.c  i2c_connection.c
components/i2c_oled/include/: drawing.h  i2c_connection.h
components/minimp3/: CMakeLists.txt
components/sd_card/: CMakeLists.txt  Kconfig.projbuild  init_sd_card.c
components/sd_card/include/: init_sd_card.h
components/spiffs_lib/: CMakeLists.txt  init_fs.c
components/spiffs_lib/include/: init_fs.h
components/types/: CMakeLists.txt
components/types/include/: local_types.h
components/wifi_ap/: CMakeLists.txt  Kconfig.projbuild  ap_init.c
components/wifi_ap/certs/: prvtkey.pem  servercert.pem
components/wifi_ap/https/: main_http.c  main_http.h
components/wifi_ap/https/uri_handlers/check/: check.c  check.h
components/wifi_ap/https/uri_handlers/upload/: upload.c  upload.h
components/wifi_ap/include/: ap_init.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/reusable/: reusable.c  reusable.h
main/ui/: ui_components.c  ui_components.h
